Board service test